media queries in, covering from mobile portrait(very small) to larger screens causing center position issues

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,15 +1,53 @@
 // widescreens
 @include mediaXl{
+    .private-repos{
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 2rem;
+    }
     .projects{
         grid-template-columns: repeat(4, 1fr);
     }
 }
+
+// resolves card touching 
+@media(min-width: #{1170px}) and (max-width: #{1397px}){
+    .private-repos{
+        grid-template-columns: repeat(2, 1fr);
+        // grid-column-gap: 1rem;
+    }
+}
+
 // desktops & laptops
 @include mediaLg{
+    .private-repos{
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 3rem;
+    }
     .projects{
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+// fixes cards to be more centered
+@media(min-width: #{590px}) and (max-width: #{735px}){
+    .private-repos{
+        .project-item{
+            margin-left: 55px;
+        }
+        
+    }
+}
+
+// same, fixes cards to be more centered
+@media(min-width: #{725px}) and (max-width: #{768px}){
+    .private-repos{
+        .project-item{
+            margin-left: 150px;
+        }
+        
+    }
+}
+
 // tablets & small laptops
 @include mediaMd{ 
     main {
@@ -24,9 +62,9 @@
 
     ul.menu-nav, 
     div.menu-branding {
-       float: none;
-       width: 100%;
-       min-height: 0;
+        float: none;
+        width: 100%;
+        min-height: 0;
         
         &.show {
             transform: translate3d(0, 0, 0);
@@ -83,6 +121,10 @@
             }
         }
     }
+    .private-repos{
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 25px;
+    }
 
     .projects {
         grid-template-columns: repeat(2, 1fr);
@@ -103,8 +145,18 @@
             font-size: 5rem;
         }
     }
-
+    .private-repos{
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 50px;
+    }
     .projects {
         grid-template-columns: 1fr;
+    }
+}
+
+// Mobile portrait 
+@media(min-width: #{280px}) and (max-width: #{480px}){
+    .private-repos{
+        margin-left: -25px;            
     }
 }
